2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.ac: Added "rw" to ALL_LINGUAS.

2005-03-31  John Dennis  <jdennis@redhat.com>

	* lib/util.py
	* lib/mozilla_bookmarks.py
	* lib/sources/mozillasource.py

	Fix traversal order problem, traversal order is now identical to
	originial bookmark order.

	Move DictCompare from mozillasource.py to util.py so it can be shared.
	
2005-03-31  John Dennis  <jdennis@redhat.com>

	* lib/mozilla_bookmarks.py
	* lib/sources/mozillasource.py

	Initial "glue" to wed together mozilla_bookmarks and mozillasource.
	Mozillasource now monitors and creates a bookmark object.
	Remove obsolete ununsed code
	Clean up home_dir initialization
	Mozilla_bookmarks now python stand alone for testing, not sh standalone
	Can now compare and generate differences between two bookmark files.
	Can now write out bookmark file from data structure (note, the 
	original ordering is not fully preserved, this needs to be fixed.
	Attributes written out can now be filtered.
	Rework add_file method.
	
2005-03-30  John Dennis  <jdennis@redhat.com>

	* lib/mozilla_bookmarks.py: Add new python file for mozilla
	bookmarks. Not complete yet, it can parse DOCTYPE
	NETSCAPE-Bookmark-file-1 format file, build a data structure of
	folder trees, bookmarks, and all attributes. Folders and bookmarks
	can be searched for.

	ToDo: Generate the difference between two book mark files, this
	will use the same difference generator code currently in
	mozillasource. Merge one bookmark file into another. Integrate
	into monitor and apply. Filter attributes during apply that should
	not be merged (e.g. timestamps)

Sat Mar 26 17:37:45 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.ac: applied patch from Joshua Hoblitt to add Gentoo support

2005-03-24  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: post-release bump to 0.18.

==================== 0.17 ====================

2005-03-24  Mark McLoughlin  <markmc@redhat.com>
