@@ -1,3 +1,7 @@
+2005-04-06  John Dennis  <jdennis@redhat.com>
+
+	* bookmark changes now working
+
 2005-04-01  Steve Murphy  <murf@e-tools.com>
 
         * configure.ac: Added "rw" to ALL_LINGUAS.
